--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,4 +6,17 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
-@import 'bootstrap-icons/font/bootstrap-icons';
+//@import '~bootstrap-icons/font/bootstrap-icons';
+
+html, body, #app {
+    height: 100%
+}
+
+nav, footer {
+        background-color: #e3f2fd;
+}
+
+main {
+    flex-grow: 1;
+}
+
